plugins {
    id 'java'
}

repositories {
    mavenLocal()
    maven {
        url = 'https://repo.runelite.net'
    }
    mavenCentral()
}

def runeLiteVersion = 'latest.release'

configurations {
    runtimeOnly.extendsFrom compileOnly
}

dependencies {
    compileOnly group: 'net.runelite', name: 'client', version: runeLiteVersion

    compileOnly 'org.projectlombok:lombok:1.18.30'
    annotationProcessor 'org.projectlombok:lombok:1.18.30'

    testImplementation 'junit:junit:4.12'
    testImplementation group: 'net.runelite', name: 'client', version: runeLiteVersion
    testImplementation group: 'net.runelite', name: 'jshell', version: runeLiteVersion
}

group = 'com.drophistory'
version = '1.0.0'

tasks.withType(JavaCompile) {
    options.encoding = 'UTF-8'
    options.release = 11
}

// Task to run the plugin in the RuneLite client for development
task run(type: JavaExec) {
    classpath = sourceSets.main.runtimeClasspath
    mainClass = 'net.runelite.client.RuneLite'
    enableAssertions = true
    args '--developer-mode'
    jvmArgs '--add-opens=java.base/java.lang.invoke=ALL-UNNAMED'
}
